--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -123,6 +121,15 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
 
 <h1>AI 가계부 앱 프로토타입 (Gemini API 통합)</h1>
 
+<section id="apiKeySection">
+  <h2>0. Google AI API 키 설정</h2>
+  <p>챗봇 기능을 사용하려면 Google AI Studio에서 발급받은 API 키를 입력해주세요.</p>
+  <label for="apiKeyInput">API 키:</label>
+  <input type="text" id="apiKeyInput" placeholder="여기에 API 키를 입력하세요 (예: AIza...)" />
+  <button onclick="setApiKeyAndInitializeAI()">API 키 설정 및 AI 초기화</button>
+  <p id="apiKeyStatus" style="margin-top:10px;"></p>
+</section>
+
 <section id="userInfoSection">
   <h2>1. 사용자 정보 입력</h2>
   <label for="age">연령</label>
@@ -208,33 +215,44 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
 <script type="module">
   import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
 
-  // -------------------------------------------------------------------------
-  // IMPORTANT: Replace with your own Google AI API Key
-  // Google AI Studio (https://aistudio.google.com/)에서 API 키를 발급받아 아래에 넣어주세요.
-  const API_KEY = "AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw"; // <--- THIS IS A PLACEHOLDER KEY. REPLACE IT!
-  // -------------------------------------------------------------------------
+  let genAI = null;
+  let model = null;
+  let userProvidedApiKey = ""; // 사용자가 입력한 API 키를 저장할 변수
 
-  let genAI;
-  let model; // Declare model here so it's in scope
+  const apiKeyStatusElement = document.getElementById('apiKeyStatus');
+  const chatbotMessages = document.getElementById('chatbotMessages');
 
-  // API Key Check and Initialization
-  const PLACEHOLDER_API_KEY_VALUE = "AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw"; // Specific placeholder
-  if (API_KEY === PLACEHOLDER_API_KEY_VALUE || API_KEY.trim() === "" || API_KEY.toLowerCase().includes("your_api_key") || API_KEY.length < 30) {
-      const warningMessage = "경고: Google AI API 키가 설정되지 않았거나 유효하지 않은 키입니다. 챗봇 기능이 동작하지 않을 수 있습니다. 코드 내의 `API_KEY` 변수를 실제 API 키로 교체해주세요.";
-      console.warn(warningMessage);
-      alert(warningMessage); // Make it more prominent
-      // model will remain undefined or null
-  } else {
-      try {
-          genAI = new GoogleGenerativeAI(API_KEY);
-          model = genAI.getGenerativeModel({ model: "gemini-1.5-flash-latest" });
-          console.log("Google AI SDK 초기화 성공. (실제 API 키가 사용된 경우)");
-      } catch (error) {
-          console.error("Google AI SDK 초기화 실패:", error);
-          alert("Google AI SDK를 초기화하는 데 문제가 발생했습니다. API 키를 확인하거나 콘솔 로그를 참조하세요. 챗봇 기능 사용이 어려울 수 있습니다.");
-          // model will remain undefined or be null if an error occurs during assignment
-      }
+  function setApiKeyAndInitializeAI() {
+    const apiKeyInput = document.getElementById('apiKeyInput').value.trim();
+    if (!apiKeyInput) {
+      apiKeyStatusElement.textContent = "API 키를 입력해주세요.";
+      apiKeyStatusElement.style.color = "red";
+      model = null; // 키가 없으면 모델도 null로 설정
+      initializeChatbot(); // 챗봇 메시지 업데이트
+      return;
+    }
+
+    userProvidedApiKey = apiKeyInput; // 입력된 키 저장
+    apiKeyStatusElement.textContent = "API 키를 설정 중입니다...";
+    apiKeyStatusElement.style.color = "orange";
+
+    try {
+      genAI = new GoogleGenerativeAI(userProvidedApiKey);
+      model = genAI.getGenerativeModel({ model: "gemini-1.5-flash-latest" });
+      apiKeyStatusElement.textContent = "API 키가 성공적으로 설정되었고 AI가 초기화되었습니다.";
+      apiKeyStatusElement.style.color = "green";
+      console.log("Google AI SDK 초기화 성공 (사용자 제공 키).");
+      // AI 초기화 성공 후 챗봇 초기 메시지 다시 설정
+      initializeChatbot(true);
+    } catch (error) {
+      console.error("Google AI SDK 초기화 실패:", error);
+      apiKeyStatusElement.textContent = `AI 초기화 실패: ${error.message}. API 키를 확인해주세요.`;
+      apiKeyStatusElement.style.color = "red";
+      model = null; // 오류 발생 시 모델 null 처리
+      initializeChatbot(); // 챗봇 메시지 업데이트
+    }
   }
+  window.setApiKeyAndInitializeAI = setApiKeyAndInitializeAI;
 
 
   // 사용자 정보 저장
@@ -250,7 +268,7 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
     userInfo = { age, salary, household };
     document.getElementById('userInfoResult').textContent = `정보 저장 완료: ${age}세, 월급 ${salary.toLocaleString()}원, 동거인 ${household}명`;
   }
-  window.saveUserInfo = saveUserInfo; // Make available to inline onclick
+  window.saveUserInfo = saveUserInfo;
 
   // 영수증 이미지 미리보기
   const receiptImageInput = document.getElementById('receiptImage');
@@ -377,24 +395,21 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
   }
 
   // 챗봇 (Gemini API)
-  const chatbotMessages = document.getElementById('chatbotMessages');
-
   function appendChatMessage(sender, text) {
     const div = document.createElement('div');
     div.classList.add('message', sender);
     div.textContent = text;
     chatbotMessages.appendChild(div);
     chatbotMessages.scrollTop = chatbotMessages.scrollHeight; // Auto-scroll to bottom
-    return div; // Return the element for potential modification (e.g., "Thinking..." message)
+    return div;
   }
 
   async function getGeminiChatReply(userMessage) {
     if (!model) {
-        // Enhanced message if API key is a known placeholder
-        if (API_KEY === PLACEHOLDER_API_KEY_VALUE || API_KEY.trim() === "" || API_KEY.toLowerCase().includes("your_api_key") || API_KEY.length < 30) {
-             return "죄송합니다, AI 모델을 사용하려면 유효한 Google AI API 키를 코드에 설정해야 합니다. 현재 설정된 키는 플레이스홀더입니다.";
+        if (!userProvidedApiKey) {
+            return "죄송합니다. 챗봇을 사용하려면 먼저 상단의 'Google AI API 키 설정' 섹션에서 API 키를 입력하고 설정해주세요.";
         }
-        return "죄송합니다, AI 모델이 준비되지 않았습니다. API 키 설정 또는 네트워크 연결을 확인해주세요.";
+        return "죄송합니다, AI 모델이 아직 준비되지 않았습니다. API 키 설정을 다시 시도하거나, 입력한 키가 유효한지 확인해주세요.";
     }
     // Construct a more detailed prompt for better AI guidance
     const prompt = `
@@ -426,8 +441,11 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
         return text;
     } catch (error) {
         console.error("Error calling Gemini API:", error);
-        if (error.message && error.message.includes("API key not valid")) { // Check if error.message exists
-            return "죄송합니다. API 키가 유효하지 않습니다. 관리자에게 문의하거나 API 키를 확인해주세요.";
+        if (error.message && error.message.toLowerCase().includes("api key not valid")) {
+            apiKeyStatusElement.textContent = "API 키가 유효하지 않습니다. 다시 확인해주세요.";
+            apiKeyStatusElement.style.color = "red";
+            model = null; // 키가 유효하지 않으면 모델 비활성화
+            return "죄송합니다. API 키가 유효하지 않습니다. 상단에서 API 키를 다시 설정해주세요.";
         }
         return "죄송합니다, AI 응답을 가져오는 중 오류가 발생했습니다. 잠시 후 다시 시도해주세요.";
     }
@@ -441,22 +459,33 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
     appendChatMessage('user', userText);
     input.value = '';
 
+    if (!model) {
+        const noApiKeyReply = await getGeminiChatReply(userText); // This will return the "API key needed" message
+        appendChatMessage('bot', noApiKeyReply);
+        return;
+    }
+
     const thinkingMessageElement = appendChatMessage('bot', 'AI가 생각 중입니다...');
 
     try {
         const botReply = await getGeminiChatReply(userText);
-        thinkingMessageElement.textContent = botReply; // Update the "thinking" message with the actual reply
+        thinkingMessageElement.textContent = botReply;
     } catch (error) {
-        // Error is already logged in getGeminiChatReply, update message if needed
         thinkingMessageElement.textContent = 'AI 응답 처리 중 문제가 발생했습니다.';
     }
-    chatbotMessages.scrollTop = chatbotMessages.scrollHeight; // Ensure scroll after update
+    chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
   }
   window.sendChat = sendChat;
   
   // Initialize Chatbot with a greeting
-  function initializeChatbot() {
-    appendChatMessage('bot', '안녕하세요! AI 가계부 상담사입니다. 재정 관련 질문이나 앱 사용법에 대해 물어보세요. (예: 절약 팁 알려줘)');
+  function initializeChatbot(aiReady = false) {
+    // Clear previous messages first
+    chatbotMessages.innerHTML = '';
+    if (aiReady && model) {
+      appendChatMessage('bot', '안녕하세요! AI 가계부 상담사입니다. 재정 관련 질문이나 앱 사용법에 대해 물어보세요. (예: 절약 팁 알려줘)');
+    } else {
+      appendChatMessage('bot', 'AI 챗봇을 사용하려면 먼저 상단에서 Google AI API 키를 설정해주세요.');
+    }
   }
 
 
@@ -491,7 +520,7 @@ AIzaSyBKOiNM37OW2gqdpUGF1t4Zhbk29qagjtw
 
   // Initial calls
   displayCoupons();
-  initializeChatbot();
+  initializeChatbot(); // 페이지 로드 시 초기 챗봇 메시지 설정
 
 </script>
 
