--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   button:hover {
     background: #388e3c;
   }
+  button:disabled {
+    background: #a5d6a7; /* Disabled state color */
+    cursor: not-allowed;
+  }
   #receiptPreview {
     max-width: 250px;
     margin-top: 10px;
@@ -125,7 +129,8 @@
   <p>챗봇 기능을 사용하려면 Google AI Studio에서 발급받은 API 키를 입력해주세요.</p>
   <label for="apiKeyInput">API 키:</label>
   <input type="text" id="apiKeyInput" placeholder="여기에 API 키를 입력하세요 (예: AIza...)" />
-  <button onclick="setApiKeyAndInitializeAI()">API 키 설정 및 AI 초기화</button>
+  <button id="setApiKeyBtn">API 키 설정</button>
+  <button id="initializeAiBtn" disabled>AI 초기화</button>
   <p id="apiKeyStatus" style="margin-top:10px;"></p>
 </section>
 
@@ -200,7 +205,7 @@
   <h2>6. 챗봇 기반 가계부 상담사 (AI Powered)</h2>
   <div id="chatbotMessages"></div>
   <input type="text" id="chatInput" placeholder="질문을 입력하세요. 예: 절약 팁 알려줘" />
-  <button onclick="sendChat()">전송</button>
+  <button id="sendChatBtn">전송</button>
 </section>
 
 <section id="couponSection">
@@ -217,35 +222,83 @@
   let expenses = [];
   let groupExpenses = [];
   let model = null;
+  let chat = null; // 챗봇 세션
   let genAI = null;
-  let userProvidedApiKey = null;
+  let userProvidedApiKey = null; // 사용자가 입력한 API 키 저장
 
   const apiKeyStatusElement = document.getElementById("apiKeyStatus");
+  const apiKeyInput = document.getElementById('apiKeyInput');
+  const setApiKeyBtn = document.getElementById('setApiKeyBtn');
+  const initializeAiBtn = document.getElementById('initializeAiBtn');
+  const chatInput = document.getElementById('chatInput');
+  const sendChatBtn = document.getElementById('sendChatBtn');
+  const chatbotMessages = document.getElementById("chatbotMessages");
 
-  // 0. API 키 설정 및 AI 초기화
-  function setApiKeyAndInitializeAI() {
-    const apiKeyInput = document.getElementById('apiKeyInput').value.trim();
-    if (!apiKeyInput) {
+  // 페이지 로드 시 챗봇 관련 UI 초기 상태 설정
+  document.addEventListener('DOMContentLoaded', () => {
+    // chatInput과 sendChatBtn의 disabled 속성을 초기화 시에만 설정하지 않습니다.
+    // 사용자가 직접 API 키 설정 및 AI 초기화를 해야만 챗봇이 동작합니다.
+    appendMessage("bot", "안녕하세요! 챗봇을 이용하시려면 먼저 API 키를 설정하고 AI를 초기화해주세요.");
+  });
+
+  // 0. API 키 설정 (첫 번째 단계)
+  setApiKeyBtn.addEventListener('click', () => {
+    const key = apiKeyInput.value.trim();
+    if (!key) {
       apiKeyStatusElement.textContent = "API 키를 입력해주세요.";
       apiKeyStatusElement.style.color = "red";
-      model = null;
+      userProvidedApiKey = null;
+      initializeAiBtn.disabled = true; // API 키 없으면 AI 초기화 버튼 비활성화
       return;
     }
-    userProvidedApiKey = apiKeyInput;
-    apiKeyStatusElement.textContent = "API 키를 설정 중입니다...";
+    userProvidedApiKey = key;
+    apiKeyStatusElement.textContent = "API 키가 성공적으로 설정되었습니다. 이제 AI를 초기화할 수 있습니다.";
+    apiKeyStatusElement.style.color = "green";
+    initializeAiBtn.disabled = false; // API 키 설정되면 AI 초기화 버튼 활성화
+  });
+
+  // 0. AI 초기화 (두 번째 단계)
+  initializeAiBtn.addEventListener('click', async () => {
+    if (!userProvidedApiKey) {
+      apiKeyStatusElement.textContent = "먼저 API 키를 설정해주세요.";
+      apiKeyStatusElement.style.color = "red";
+      return;
+    }
+
+    apiKeyStatusElement.textContent = "AI를 초기화 중입니다...";
     apiKeyStatusElement.style.color = "orange";
 
     try {
       genAI = new window.GoogleGenerativeAI(userProvidedApiKey);
       model = genAI.getGenerativeModel({ model: "gemini-1.5-flash-latest" });
-      apiKeyStatusElement.textContent = "API 키가 성공적으로 설정되었고 AI가 초기화되었습니다.";
+      
+      // 챗 세션 시작
+      chat = model.startChat({
+        history: [], // 이전 대화 기록을 여기에 추가할 수 있습니다.
+        generationConfig: {
+          maxOutputTokens: 500, // 응답 길이 제한
+        },
+      });
+
+      apiKeyStatusElement.textContent = "AI가 성공적으로 초기화되었습니다. 이제 챗봇을 사용할 수 있습니다.";
       apiKeyStatusElement.style.color = "green";
+      // AI 초기화 성공 시에만 챗봇 입력 및 전송 버튼을 활성화
+      chatInput.disabled = false; 
+      sendChatBtn.disabled = false;
+      appendMessage("bot", "가계부 상담 챗봇이 활성화되었습니다! 무엇이든 물어보세요.");
+
     } catch (error) {
-      apiKeyStatusElement.textContent = `AI 초기화 실패: ${error.message}. API 키를 확인해주세요.`;
+      console.error("AI 초기화 실패:", error); // 디버깅을 위해 콘솔에 더 자세한 에러 출력
+      apiKeyStatusElement.textContent = `AI 초기화 실패: ${error.message}. API 키가 올바른지 확인해주세요.`;
       apiKeyStatusElement.style.color = "red";
       model = null;
+      chat = null;
+      // 오류 발생 시 다시 비활성화
+      chatInput.disabled = true;
+      sendChatBtn.disabled = true;
     }
-  }
+  });
+
 
   // 1. 사용자 정보 저장
   function saveUserInfo() {
@@ -296,7 +349,7 @@
     msgEl.textContent = `가계부에 "${storeName}" ${price}원, ${card} 결제가 기록되었습니다.`;
     msgEl.style.color = "green";
 
-    // 초기 소비 내역 업데이트
+    // 소비 내역 테이블 업데이트
     updateExpenseTable();
 
     // 영수증 입력칸 초기화
@@ -386,29 +439,44 @@
   }
 
   // 6. 챗봇 기능 (Google Gemini API 호출)
-  const chatbotMessages = document.getElementById("chatbotMessages");
+  // 챗봇 전송 버튼 클릭 이벤트 리스너
+  sendChatBtn.addEventListener('click', sendChat);
+  // 챗봇 입력 필드에서 Enter 키 누를 시 전송
+  chatInput.addEventListener('keypress', (e) => {
+    if (e.key === 'Enter') { // disabled 체크는 sendChat 함수 내에서 이미 처리됩니다.
+      sendChat();
+    }
+  });
 
   async function sendChat() {
-    const input = document.getElementById("chatInput");
-    const text = input.value.trim();
+    const text = chatInput.value.trim();
     if (!text) return;
 
-    appendMessage("user", text);
-    input.value = "";
-
-    if (!model) {
-      appendMessage("bot", "API 키가 설정되어 있지 않습니다. 먼저 API 키를 입력하고 초기화하세요.");
-      return;
+    // AI가 초기화되지 않았으면 메시지를 보내지 않도록 처리
+    if (!chat) { 
+      appendMessage("bot", "챗봇이 초기화되지 않았습니다. API 키를 확인하고 다시 시도해주세요.");
+      return; // 여기서 함수 실행을 중단합니다.
     }
 
+    appendMessage("user", text);
+    chatInput.value = "";
+    chatInput.disabled = true; // 응답 대기 중 입력 비활성화
+    sendChatBtn.disabled = true; // 응답 대기 중 전송 버튼 비활성화
+
+
     try {
-      const response = await model.chat.completions.create({
-        messages: [{ role: "user", content: text }]
-      });
-      const botReply = response.choices[0].message.content;
+      // 챗 세션에 메시지 전송
+      const result = await chat.sendMessage(text);
+      const botReply = result.response.text();
       appendMessage("bot", botReply);
     } catch (error) {
-      appendMessage("bot", "AI 응답 중 오류가 발생했습니다: " + error.message);
+      console.error("AI 응답 중 오류 발생:", error);
+      appendMessage("bot", "AI 응답 중 오류가 발생했습니다: " + error.message + ". API 키가 유효한지, 사용량 한도를 초과하지 않았는지 확인하거나, 개발자 콘솔을 확인해주세요.");
+    } finally {
+      // 응답 완료 후 항상 입력 활성화
+      chatInput.disabled = false; 
+      sendChatBtn.disabled = false;
+      chatInput.focus(); // 입력 필드에 포커스
     }
   }
 
@@ -445,9 +513,8 @@
     });
   }
 
-  // 초기화
+  // 초기 로드 시 쿠폰 필터링 함수 실행
   filterCoupons();
-
 </script>
 
 </body>
